[metadata]
name = jax-nerf
version = attr: nerf.__version__
author = Penfei Zhao
author_email = p.zhao.9000@email.address
url = 
description = A basic jax implementaiton of neural radiance fields
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nerf, setuptools
license = MIT License

[options]
packages = find:
zip_safe = True
package_dir = src

[options.packages.find]
where=src

[options.package_data]
example = data/schema.json, *.txt
* = README.md